--- a/serveur/.env
+++ b/serveur/.env
@@ -7,6 +7,6 @@ DB_CLUSTER = "cluster0.4buayet"
 
 #clé secrete pour la créatin et la vérificatin des JWT (jsonWebToken)= token d'identification
 JWT_SECRET =  Mon_JWT_SECRET_est_le_meilleure
-
+SESSION_SECRET=VotreCleSecrete
 //port utilisé
 PORT = 3005
